--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
           
           <div class="col-lg-4 col-md-6 portfolio-item ">
-            <img src="./assets/img/portfolio/1.jpg" class="img-fluid" alt="">
+            <img src="/assets/img/portfolio/1.jpg" class="img-fluid" alt="">
           </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item ">
