--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
             <div class="row">
               <div class="col-md-6 d-flex footer-contact">
           
-                  <strong>Phone: </strong>(828) 424-2590<br>
+                <p><strong>Phone: </strong>(828) 424-2590</p><br>
                   
               </div>
               <div class="col-md-6 d-flex footer-contact">
-                <strong>Email:</strong>elmer@elmerslandscaping.net<br>
+                <p><strong>Email:</strong>elmer@elmerslandscaping.net</p><br>
               </div>
             </div>
           </div>
